--- a/week06/作业6.md
+++ b/week06/作业6.md
@@ -1,2 +1,85 @@
 + 创建数据库
-  create database ''
+
+```sql
+  create database if not exits 'test';
+```
+  
++ 使用数据库
+
+```sql
+  use 'test';
+```
+
++ 创建用户表
+
+```sql
+  DROP TABLE IF EXISTS `user`;
+  CREATE TABLE `user`
+  (
+    `id`            int(8) NOT NULL AUTO_INCREMENT COMMENT '用户id',
+    `name`          varchar(16) NOT NULL COMMENT '用户姓名',
+    `age`           int(3) DEFAULT NULL COMMENT '年龄',
+    `sex`           char(2) NOT NULL COMMENT '性别',
+    `password`      varchar(255) NOT NULL COMMENT '用户密码',
+    `phone_number`  int(11) NOT NULL COMMENT '手机号码',
+    `address`       varchar(255) DEFAULT NULL COMMENT '地址信息',
+    PRIMARY KEY (`id`)
+  ) ENGINE = InnoDB
+  DEFAULT CHARSET = utf8 AUTO_INCREMENT=1
+  COLLATE = utf8_bin;
+```
+
++ 创建商品类别表
+
+```sql
+DROP TABLE IF EXISTS `catalog`;
+CREATE TABLE `catalog`
+  (
+    `id`            int(8) NOT NULL AUTO_INCREMENT COMMENT '商品类别id',
+    `name`          varchar(16) NOT NULL COMMENT '商品类别名称',
+    `create_at`      datetime(2) NOT NULL COMMENT '商品类别创建时间',
+    `update_at`      datetime(2) NOT NULL COMMENT '商品类别修改时间',
+    PRIMARY KEY (`id`)
+  ) ENGINE = InnoDB
+  DEFAULT CHARSET = utf8 AUTO_INCREMENT=1
+  COLLATE = utf8_bin;
+```
+
++ 创建商品表
+
+```sql
+DROP TABLE IF EXISTS `product`;
+CREATE TABLE `product`
+  (
+    `id`            int(8) NOT NULL AUTO_INCREMENT COMMENT '商品id',
+    `name`          varchar(16) NOT NULL COMMENT '商品名称',
+    `stock`         int(8) NOT NULL COMMENT '商品库存',
+    `price`         int(8) NOT NULL COMMENT '商品单价',
+    `description`   varchar(255) DEFAULT NULL COMMENT '商品描述',
+    `catalog_id`    int(8) NOT NULL COMMENT '商品类别id',
+    `supplier`      varchar(255) NOT NULL COMMENT '供应商名称',
+    `status`        int(1) NOT NULL COMMENT '商品状态',
+    PRIMARY KEY (`id`)
+  ) ENGINE = InnoDB
+  DEFAULT CHARSET = utf8 AUTO_INCREMENT=1
+  COLLATE = utf8_bin;
+```
+
++ 创建订单表
+
+```sql
+DROP TABLE IF EXISTS `order`;
+CREATE TABLE `order`
+  (
+    `id`             int(8) NOT NULL AUTO_INCREMENT COMMENT '订单id',
+    `user_id`        int(8) NOT NULL AUTO_INCREMENT COMMENT '用户id',
+    `product_id`     int(8) NOT NULL AUTO_INCREMENT COMMENT '商品id',
+    `product_number` int(8) NOT NULL COMMENT '商品数量',
+    `total_price`    int(8) NOT NULL COMMENT '商品总价',
+    `create_at`      datetime(2) NOT NULL COMMENT '订单创建时间',
+    `update_at`      datetime(2) NOT NULL COMMENT '订单修改时间',
+    PRIMARY KEY (`id`)
+  ) ENGINE = InnoDB
+  DEFAULT CHARSET = utf8 AUTO_INCREMENT=1
+  COLLATE = utf8_bin;
+```
